--- a/index.html
+++ b/index.html
@@ -28,17 +28,15 @@
             <option value="">-- SELECT --</option>
         </select>
     </span>
-    <br><br>
-    <button class="converter-button" id='button' onclick="fetchCurrentPrice()"><b>Convert</b></button>
-    <br><br>
-    <h3>
-        Result:<h4 id="result">---</h4>
-    </h3>
-    <br><br>
     
-  
-  </div> <!-- /converter-side-b -->
-</div><!-- /converter-wrapper -->
+    <button class="converter-button" id='button' onclick="fetchCurrentPrice()"><b>Convert</b></button>
+    
+   <h3>
+       Result:<h4 id="result">---</h4>
+   </h3>
+
+  </div>
+</div>
 
 <script src="script.js"></script>
 
