--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
     </span>
     
     <button class="converter-button" id='button' onclick="fetchCurrentPrice()"><b>Convert</b></button>
-    
+   
+  <section>
    <h3>
        Result:<h4 id="result">---</h4>
    </h3>
+  </section>
 
   </div>
 </div>
